--- a/unknown_piriip.crack.json
+++ b/unknown_piriip.crack.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_piriip.crack",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_piriip.crack",
 	"sector": "NGC_0026",
 	"sec_level": 1,
@@ -19,10 +19,14 @@
 				"from": "NGC_0026",
 				"to": "HJG_7470"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569467506666
+		}
 	],
-	"updt": 1568829891286,
-	"edit": 28,
+	"updt": 1568838465589,
+	"edit": 29,
 	"pl_output": "Cannot read property 'call' of undefined",
 	"next_scrape": 1568926663814
 }
