--- a/unknown_piriip.db.json
+++ b/unknown_piriip.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_piriip.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_piriip.db",
 	"sector": "SPC_9897",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566014947228
+		},
+		{
+			"type": "died",
+			"when": 1569467517573
 		}
 	],
 	"scrape_ct": 18,
@@ -101,8 +105,8 @@
 			]
 		}
 	],
-	"updt": 1568728827801,
-	"edit": 7,
+	"updt": 1568744444074,
+	"edit": 8,
 	"identified": [
 		{
 			"document": "Erin File",
