--- a/unknown_piriip.fry.json
+++ b/unknown_piriip.fry.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_piriip.fry",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "dead",
 	"script": "unknown_piriip.fry",
 	"sector": "NGC_0026",
 	"sec_level": 1,
@@ -19,10 +19,14 @@
 				"from": "NGC_0026",
 				"to": "HJG_7470"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569467506666
+		}
 	],
-	"updt": 1569463740480,
-	"edit": 1693,
+	"updt": 1569465996435,
+	"edit": 1694,
 	"output": "Cannot read property 'name' of undefined",
 	"next_scrape": 1569553910980,
 	"pl_output": "Cannot read property 'name' of undefined"
