--- a/unknown_yuqh2v.t1_scraper.json
+++ b/unknown_yuqh2v.t1_scraper.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_yuqh2v.t1_scraper",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_yuqh2v.t1_scraper",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569465446539,
+	"last_scraped": 1569467975070,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569463063881,
-	"edit": 126,
-	"next_scrape": 1569508808958,
+	"updt": 1569465543890,
+	"edit": 127,
+	"next_scrape": 1569512779176,
 	"category": "coin_flipper",
-	"last_update": 1569465446539,
+	"last_update": 1569467975070,
 	"output": [
 		{
 			"args": {},
-			"calls": 1163993,
+			"calls": 1187293,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"patter",
