--- a/derelict_clrnxi.db.json
+++ b/derelict_clrnxi.db.json
@@ -1,27 +1,27 @@
 {
 	"_id": "derelict_clrnxi.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "derelict_clrnxi.db",
 	"sector": "HJG_8314",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569467743003,
+	"last_scraped": 1569470347967,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569465543890,
-	"edit": 125,
-	"next_scrape": 1569509889026,
+	"updt": 1569467798284,
+	"edit": 126,
+	"next_scrape": 1569515325357,
 	"category": "dice_roller",
-	"last_update": 1569467743003,
+	"last_update": 1569470347967,
 	"output": [
 		{
 			"args": {},
-			"calls": 1049897,
+			"calls": 1059008,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"t. ##",
