--- a/uknown_zfq3ba.binmat_bot.json
+++ b/uknown_zfq3ba.binmat_bot.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_zfq3ba.binmat_bot",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_zfq3ba.binmat_bot",
 	"sector": "K_8441",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562032600019
+		},
+		{
+			"type": "died",
+			"when": 1569531532144
 		}
 	],
 	"next_scrape": 1568942098692,
@@ -84,6 +88,6 @@
 			]
 		}
 	],
-	"updt": 1568891298146,
-	"edit": 342
+	"updt": 1568898064622,
+	"edit": 343
 }
