--- a/uknown_zfq3ba.solver.json
+++ b/uknown_zfq3ba.solver.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_zfq3ba.solver",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_zfq3ba.solver",
 	"sector": "VNP_8704",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566693077835
+		},
+		{
+			"type": "died",
+			"when": 1569531532144
 		}
 	],
 	"next_scrape": 1569048801254,
@@ -75,6 +79,6 @@
 			]
 		}
 	],
-	"updt": 1568998703125,
-	"edit": 123
+	"updt": 1569003217753,
+	"edit": 124
 }
