--- a/unknown_vhzebu.blackjack.json
+++ b/unknown_vhzebu.blackjack.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_vhzebu.blackjack",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_vhzebu.blackjack",
 	"sector": "K_6830",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566878416405
+		},
+		{
+			"type": "died",
+			"when": 1569531532144
 		}
 	],
 	"next_scrape": 1568838805559,
@@ -60,6 +64,6 @@
 			]
 		}
 	],
-	"updt": 1568759063480,
-	"edit": 38
+	"updt": 1568759288718,
+	"edit": 39
 }
