--- a/unknown_vhzebu.lights.json
+++ b/unknown_vhzebu.lights.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_vhzebu.lights",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_vhzebu.lights",
 	"sector": "VNP_0345",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562511544007
+		},
+		{
+			"type": "died",
+			"when": 1569531532144
 		}
 	],
 	"next_scrape": 1568999845127,
@@ -78,6 +82,6 @@
 			]
 		}
 	],
-	"updt": 1568951064786,
-	"edit": 304
+	"updt": 1568956476032,
+	"edit": 305
 }
