--- a/uknown_73t1c3.bot_refill.json
+++ b/uknown_73t1c3.bot_refill.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_73t1c3.bot_refill",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "uknown_73t1c3.bot_refill",
 	"sector": "SPC_3851",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561971962605
+		},
+		{
+			"type": "died",
+			"when": 1569572523456
 		}
 	],
 	"scrape_ct": 20,
@@ -204,8 +208,8 @@
 			]
 		}
 	],
-	"updt": 1567714945331,
-	"edit": 5,
+	"updt": 1568687995472,
+	"edit": 6,
 	"identified": [
 		{
 			"document": "NOT FOUND",
