--- a/uknown_73t1c3.db.json
+++ b/uknown_73t1c3.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_73t1c3.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_73t1c3.db",
 	"sector": "HJG_6540",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1569289758708
+		},
+		{
+			"type": "died",
+			"when": 1569572433470
 		}
 	],
 	"scrape_ct": 14,
@@ -125,5 +129,7 @@
 				"Meme Cri"
 			]
 		}
-	]
+	],
+	"updt": 1569289978920,
+	"edit": 1
 }
