--- a/uknown_b6y9vb.keyring.json
+++ b/uknown_b6y9vb.keyring.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_b6y9vb.keyring",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "dead",
 	"script": "uknown_b6y9vb.keyring",
 	"sector": "K_1215",
 	"sec_level": 1,
@@ -23,10 +23,14 @@
 				"from": "K_1215",
 				"to": "HJG_7470"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569596448321
+		}
 	],
-	"updt": 1569592713091,
-	"edit": 413,
+	"updt": 1569594743553,
+	"edit": 414,
 	"output": "{\"ok\":true,\"msg\":\"Command not found.\\n\"}",
 	"next_scrape": 1569674851477,
 	"pl_output": "{\"ok\":true,\"msg\":\"Command not found.\\n\"}",
