--- a/uknown_b6y9vb.peddle.json
+++ b/uknown_b6y9vb.peddle.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_b6y9vb.peddle",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_b6y9vb.peddle",
 	"sector": "K_8416",
 	"sec_level": 0,
@@ -19,10 +19,14 @@
 				"from": "K_8416",
 				"to": "K_0431"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569596387495
+		}
 	],
-	"updt": 1568760415671,
-	"edit": 61,
+	"updt": 1568783199778,
+	"edit": 62,
 	"pl_output": "{\"ok\":true,\"msg\":\"\"}",
 	"next_scrape": 1568849711329
 }
