--- a/uknown_gnmkze.atk.json
+++ b/uknown_gnmkze.atk.json
@@ -39,8 +39,10 @@
 					"document": "NOT FOUND",
 					"frags": [
 						"00 0000",
-						"0 0000 ",
+						"0 0100 0",
+						"0 0000 0",
 						" 0100 00",
+						" 0000\\n0",
 						" 0000 00",
 						"0000\\n000"
 					]
@@ -67,8 +69,10 @@
 					"document": "NOT FOUND",
 					"frags": [
 						"00 0000",
-						"0 0000 ",
+						"0 0100 0",
+						"0 0000 0",
 						" 0100 00",
+						" 0000\\n0",
 						" 0000 00",
 						"0000\\n000"
 					]
@@ -136,72 +140,55 @@
 				{
 					"document": "NOT FOUND",
 					"frags": [
-						"C0 ",
-						" EC",
+						"0 0100C",
+						" 0100 C",
 						"C00 0000",
+						"0 0100EC",
+						" 0100 EC",
 						"CK00 0000",
-						"CK0 0000 ",
+						"CK S0000 ",
 						"CK S0 000",
+						"CK 0 0100",
+						"CK  0100 ",
+						"C0 0100 0",
 						"C 0100 00",
 						"0000\\n000",
+						"0 0100SEC",
+						"0 0100 0C",
 						" 0100 00C",
+						" 0000\\n0C",
 						" 0000 00C",
+						"CK0 0100 0",
+						"CK0 0000 0",
+						"CK SE0000 ",
 						"CK SE0 000",
 						"CK S00 000",
+						"CK S0 0100",
+						"CK S 0100 ",
 						"CK 0100 00",
 						"CK 00 0000",
 						"CK 0 0000 ",
+						"0100 K SEC",
 						"0100 00SEC",
+						"0000\\n0SEC",
+						"0000 K SEC",
 						"0000 00SEC",
 						"00 000 SEC",
+						"0 0100 SEC",
+						"0 0100 0EC",
+						"0 0000 0EC",
 						" 0100 00EC",
+						" 0100  SEC",
+						" 0000\\n0EC",
 						" 0000 00EC",
+						"0000 CK SEC",
 						"00 000K SEC",
 						"00 0000 SEC",
+						"0 0100K SEC",
+						"0 0100 0SEC",
 						"0 000CK SEC",
+						"0 0000 0SEC",
 						"0 0000  SEC"
-					]
-				},
-				{
-					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
-					"frags": [
-						" C"
-					]
-				},
-				{
-					"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
-					"frags": [
-						" C"
-					]
-				},
-				{
-					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
-					"frags": [
-						" C"
-					]
-				},
-				{
-					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
-					"frags": [
-						" C"
-					]
-				},
-				{
-					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
-					"frags": [
-						" C"
-					]
-				},
-				{
-					"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
-					"frags": [
-						" C"
-					]
-				},
-				{
-					"document": "Erin File",
-					"frags": [
-						" C"
 					]
 				}
 			]
@@ -264,154 +251,52 @@
 				{
 					"document": "NOT FOUND",
 					"frags": [
+						"0 0100E",
+						" 0100 E",
 						"C00 0000",
-						"C0 0000 ",
+						"0 0100SE",
 						"CK00 0000",
-						"CK0 0000 ",
+						"CK S0000 ",
 						"CK S0 000",
+						"CK 0 0100",
+						"CK  0100 ",
+						"C0 0100 0",
+						"C0 0000 0",
 						"C 0100 00",
+						"0100 K SE",
 						"0100 00SE",
+						"0000\\n0SE",
 						"0000\\n000",
+						"0000 K SE",
 						"0000 00SE",
 						"00 000 SE",
+						"0 0100 SE",
+						"0 0100 0E",
+						"0 0000 0E",
 						" 0100 00E",
+						" 0100  SE",
+						" 0000\\n0E",
 						" 0000 00E",
+						"CK0 0100 0",
+						"CK0 0000 0",
+						"CK SE0000 ",
 						"CK SE0 000",
 						"CK S00 000",
+						"CK S0 0100",
+						"CK S 0100 ",
 						"CK 0100 00",
+						"CK 0000\\n0",
 						"CK 0000 00",
 						"CK 00 0000",
 						"CK 0 0000 ",
+						"0000 CK SE",
 						"00 000K SE",
 						"00 0000 SE",
+						"0 0100K SE",
+						"0 0100 0SE",
 						"0 000CK SE",
+						"0 0000 0SE",
 						"0 0000  SE"
-					]
-				},
-				{
-					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "Erin File",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "Essence",
-					"frags": [
-						" E"
-					]
-				},
-				{
-					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
-					"frags": [
-						" E"
 					]
 				}
 			]
@@ -720,22 +605,47 @@
 			"document": "NOT FOUND",
 			"frags": [
 				"I0 ",
-				" EC",
+				"0 0100C",
+				" 0100 C",
 				"I00 0000",
+				"0 0100EC",
+				" 0100 EC",
 				"IC00 0000",
 				"IC0 0000 ",
 				"I 0100 00",
+				"CK S0000 ",
+				"CK 0 0100",
+				"CK  0100 ",
+				"C0 0100 0",
+				"C0 0000 0",
 				"0000\\n000",
+				"0 0100SEC",
+				"0 0100 0C",
 				" 0100 00C",
+				" 0000\\n0C",
 				" 0000 00C",
 				"ICK00 0000",
 				"ICK0 0000 ",
 				"ICK S0 000",
 				"IC 0100 00",
+				"CK0 0100 0",
+				"CK0 0000 0",
+				"CK SE0000 ",
+				"CK S0 0100",
+				"CK S 0100 ",
+				"CK 0000\\n0",
+				"0100 K SEC",
 				"0100 00SEC",
+				"0000\\n0SEC",
+				"0000 K SEC",
 				"0000 00SEC",
 				"00 000 SEC",
+				"0 0100 SEC",
+				"0 0100 0EC",
+				"0 0000 0EC",
 				" 0100 00EC",
+				" 0100  SEC",
+				" 0000\\n0EC",
 				" 0000 00EC",
 				"ICK SE0 000",
 				"ICK S00 000",
@@ -743,42 +653,18 @@
 				"ICK 0000 00",
 				"ICK 00 0000",
 				"ICK 0 0000 ",
+				"0000 CK SEC",
 				"00 000K SEC",
 				"00 0000 SEC",
+				"0 0100K SEC",
+				"0 0100 0SEC",
 				"0 000CK SEC",
+				"0 0000 0SEC",
 				"0 0000  SEC"
 			]
 		},
 		{
-			"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
-			"frags": [
-				" E",
-				" C"
-			]
-		},
-		{
-			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
-			"frags": [
-				" E",
-				" C"
-			]
-		},
-		{
-			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
-			"frags": [
-				" E",
-				" C"
-			]
-		},
-		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
-			"frags": [
-				" E",
-				" C"
-			]
-		},
-		{
-			"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
 			"frags": [
 				" E",
 				" C"
@@ -792,6 +678,13 @@
 			]
 		},
 		{
+			"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+			"frags": [
+				" E",
+				" C"
+			]
+		},
+		{
 			"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
 			"frags": [
 				" E",
@@ -799,25 +692,28 @@
 			]
 		},
 		{
-			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+			"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
 			"frags": [
-				" E"
+				" E",
+				" C"
 			]
 		},
 		{
-			"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
 			"frags": [
-				" E"
+				" E",
+				" C"
 			]
 		},
 		{
-			"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
 			"frags": [
-				" E"
+				" E",
+				" C"
 			]
 		},
 		{
-			"document": "Essence",
+			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
 			"frags": [
 				" E"
 			]
@@ -829,13 +725,13 @@
 			]
 		},
 		{
-			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
 			"frags": [
 				" E"
 			]
 		},
 		{
-			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+			"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
 			"frags": [
 				" E"
 			]
@@ -847,13 +743,19 @@
 			]
 		},
 		{
+			"document": "MFT0X82_CLST0X69_SECT0X885F_FILE0X8C8517B2",
+			"frags": [
+				" E"
+			]
+		},
+		{
 			"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
 			"frags": [
 				" E"
 			]
 		},
 		{
-			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
+			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
 			"frags": [
 				" E"
 			]
@@ -877,14 +779,26 @@
 			]
 		},
 		{
-			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
+			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+			"frags": [
+				" E"
+			]
+		},
+		{
+			"document": "Essence",
+			"frags": [
+				" E"
+			]
+		},
+		{
+			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
 			"frags": [
 				" E"
 			]
 		}
 	],
-	"updt": 1568707178139,
-	"edit": 14,
+	"updt": 1569631956541,
+	"edit": 15,
 	"retry_args": [
 		{
 			"CLICK": true
