--- a/uknown_8e0k08.casino.json
+++ b/uknown_8e0k08.casino.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_8e0k08.casino",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_8e0k08.casino",
 	"sector": "SPC_3851",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561972836592
+		},
+		{
+			"type": "died",
+			"when": 1569673075788
 		}
 	],
 	"next_scrape": 1568759914268,
@@ -38,11 +42,17 @@
 				{
 					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
 					"frags": [
+						" mask",
 						"mestam",
+						"st acce",
+						"d 'last",
 						"t access",
+						"st actio",
 						"last act",
 						"ion' tim",
-						" and rel"
+						"and 'las",
+						" and rel",
+						" action'"
 					]
 				}
 			]
@@ -70,11 +80,17 @@
 				{
 					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
 					"frags": [
+						" mask",
 						"mestam",
+						"st acce",
+						"d 'last",
 						"t access",
+						"st actio",
 						"last act",
 						"ion' tim",
-						" and rel"
+						"and 'las",
+						" and rel",
+						" action'"
 					]
 				}
 			]
@@ -102,27 +118,39 @@
 				{
 					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
 					"frags": [
+						" mask",
 						"mestam",
+						"st acce",
+						"d 'last",
 						"t access",
+						"st actio",
 						"last act",
 						"ion' tim",
-						" and rel"
+						"and 'las",
+						" and rel",
+						" action'"
 					]
 				}
 			]
 		}
 	],
-	"updt": 1568693864420,
-	"edit": 76,
+	"updt": 1568714391480,
+	"edit": 77,
 	"identified": [
 		{
 			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
 			"frags": [
+				" mask",
 				"mestam",
+				"st acce",
+				"d 'last",
 				"t access",
+				"st actio",
 				"last act",
 				"ion' tim",
-				" and rel"
+				"and 'las",
+				" and rel",
+				" action'"
 			]
 		}
 	]
