--- a/uknown_jgxxsj.lib.json
+++ b/uknown_jgxxsj.lib.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_jgxxsj.lib",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_jgxxsj.lib",
 	"sector": "VNP_6819",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561079926417
+		},
+		{
+			"type": "died",
+			"when": 1569672813877
 		}
 	],
 	"next_scrape": 1568983654342,
@@ -87,6 +91,6 @@
 			]
 		}
 	],
-	"updt": 1568934828173,
-	"edit": 262
+	"updt": 1568942944828,
+	"edit": 263
 }
