--- a/unknown_q9frs4.pounce.json
+++ b/unknown_q9frs4.pounce.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_q9frs4.pounce",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_q9frs4.pounce",
 	"sector": "HJG_2064",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562638953712
+		},
+		{
+			"type": "died",
+			"when": 1569704771474
 		}
 	],
 	"scrape_ct": 20,
@@ -173,8 +177,8 @@
 			]
 		}
 	],
-	"updt": 1568688676077,
-	"edit": 6,
+	"updt": 1568711685121,
+	"edit": 7,
 	"identified": [
 		{
 			"document": "NOT FOUND",
