--- a/anon_y8qmri.release.json
+++ b/anon_y8qmri.release.json
@@ -1,7 +1,7 @@
 {
 	"_id": "anon_y8qmri.release",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "anon_y8qmri.release",
 	"sector": "SPC_7402",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562737965104
+		},
+		{
+			"type": "died",
+			"when": 1569713968154
 		}
 	],
 	"scrape_ct": 20,
@@ -223,8 +227,8 @@
 			]
 		}
 	],
-	"updt": 1568686417352,
-	"edit": 5,
+	"updt": 1568708080241,
+	"edit": 6,
 	"identified": [
 		{
 			"document": "NOT FOUND",
