--- a/uknown_bqu6gq.load_brain.json
+++ b/uknown_bqu6gq.load_brain.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_bqu6gq.load_brain",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_bqu6gq.load_brain",
 	"sector": "NGC_7982",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1563474647990
+		},
+		{
+			"type": "died",
+			"when": 1569714270495
 		}
 	],
 	"scrape_ct": 17,
@@ -118,8 +122,8 @@
 			]
 		}
 	],
-	"updt": 1568715293897,
-	"edit": 13,
+	"updt": 1568731142156,
+	"edit": 14,
 	"identified": [
 		{
 			"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
