--- a/unknown_q9frs4.pounce.json
+++ b/unknown_q9frs4.pounce.json
@@ -39,8 +39,11 @@
 				{
 					"document": "NOT FOUND",
 					"frags": [
-						" 0100 1",
+						"01 010",
+						"100 100",
+						"000 000",
 						"0 0000 0",
+						" 0100 10",
 						" 0000 00",
 						"000\\n0000"
 					]
@@ -124,36 +127,65 @@
 					"frags": [
 						"401 010",
 						"40000 0",
+						"201 010",
 						"01 0104",
+						"01 0102",
+						"0000 04",
 						"4G01 010",
+						"4G0000 0",
 						"4G0 0000",
 						"4000\\n00",
 						"4000 000",
 						"40 0000 ",
 						"2G01 010",
+						"2G0000 0",
+						"2G0 0000",
 						"2000 000",
 						"20 0000 ",
+						"100 1002",
 						"01 010©2",
+						"01 010 4",
 						"000\\n004",
+						"0000 0 4",
+						"0000 0 2",
+						"000 0004",
 						"4GC0000 0",
+						"4G100 100",
 						"4G000 000",
+						"4 0000 00",
+						"2GC0000 0",
 						"2G100 100",
 						"2G000 000",
+						"2 0000 00",
+						"100 100 4",
 						"100 100 2",
+						"01 010N 2",
+						"000\\n00 4",
 						"0000 0N 4",
+						"0000 0N 2",
 						"000 000 4",
 						"000 000 2",
+						"0 0000  4",
+						" 0100 104",
+						" 0100 102",
 						" 0000 004",
 						"4GC100 100",
+						"4GC000\\n00",
+						"4GC000 000",
 						"4G 0000 00",
 						"2GC100 100",
 						"2GC000\\n00",
 						"2GC000 000",
 						"2GC0 0000 ",
+						"2G 0000 00",
+						"100 100N 4",
+						"100 100N 2",
 						"000\\n00N 4",
 						"0 0000 N 4",
+						"0 0000 N 2",
 						" 0100 10 2",
 						" 0000 00 4",
+						" 0000 00 2",
 						" 0100 10N 2",
 						" 0000 00N 4"
 					]
@@ -174,49 +206,92 @@
 				"0 0000 ",
 				" 0100 10",
 				" 0000 00"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"01 010",
+						"100 100",
+						"000\\n00",
+						"000 000",
+						"0 0000 ",
+						" 0100 10",
+						" 0000 00"
+					]
+				}
 			]
 		}
 	],
-	"updt": 1568711685121,
-	"edit": 7,
+	"updt": 1569704873807,
+	"edit": 8,
 	"identified": [
 		{
 			"document": "NOT FOUND",
 			"frags": [
 				"401 010",
 				"40000 0",
+				"201 010",
 				"01 0104",
+				"01 0102",
+				"0000 04",
 				"4G01 010",
+				"4G0000 0",
 				"4G0 0000",
 				"4000\\n00",
 				"4000 000",
 				"40 0000 ",
 				"2G01 010",
+				"2G0000 0",
+				"2G0 0000",
 				"2000 000",
 				"20 0000 ",
+				"100 1002",
 				"01 010©2",
+				"01 010 4",
 				"000\\n004",
+				"0000 0 4",
+				"0000 0 2",
+				"000 0004",
 				"0 0000 0",
 				"4GC0000 0",
+				"4G100 100",
 				"4G000 000",
+				"4 0000 00",
+				"2GC0000 0",
 				"2G100 100",
 				"2G000 000",
+				"2 0000 00",
+				"100 100 4",
 				"100 100 2",
+				"01 010N 2",
 				"000\\n0000",
+				"000\\n00 4",
 				"0000 0N 4",
+				"0000 0N 2",
 				"000 000 4",
 				"000 000 2",
+				"0 0000  4",
+				" 0100 104",
+				" 0100 102",
 				" 0000 004",
 				"4GC100 100",
+				"4GC000\\n00",
+				"4GC000 000",
 				"4G 0000 00",
 				"2GC100 100",
 				"2GC000\\n00",
 				"2GC000 000",
 				"2GC0 0000 ",
+				"2G 0000 00",
+				"100 100N 4",
+				"100 100N 2",
 				"000\\n00N 4",
 				"0 0000 N 4",
+				"0 0000 N 2",
 				" 0100 10 2",
 				" 0000 00 4",
+				" 0000 00 2",
 				" 0100 10N 2",
 				" 0000 00N 4"
 			]
