--- a/anon_y8qmri.release.json
+++ b/anon_y8qmri.release.json
@@ -43,10 +43,14 @@
 				{
 					"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
 					"frags": [
-						"| BOD",
-						"TIME ",
+						"fbret",
 						"on era",
+						"ME ERR",
+						" | BOD",
+						"| TIME ",
+						"| BODY ",
 						"n erajb",
+						"G ERROR",
 						"lory' | ",
 						"llory' |",
 						" 'Mallor"
@@ -117,25 +121,31 @@
 					"document": "NOT FOUND",
 					"frags": [
 						"fbret4",
+						"4fbret",
+						"4Gfbre",
 						"4G ERR",
 						"2fbret",
 						"2TIME ",
 						"fbret 4",
+						"ME ERR4",
 						"G ERR 2",
 						"4ME ERR",
 						"2G| BOD",
 						"2 | BOD",
 						" | BOD4",
 						" | BOD2",
+						" erajb2",
 						"| TIME 2",
 						"| BODY 4",
 						"| BODY 2",
 						"fbretN 4",
 						"fbretN 2",
+						"TIME N 4",
 						"ME ERR 4",
 						"G ERRN 2",
 						"4©| TIME",
 						"4| TIME ",
+						"4| BODY ",
 						"4G| TIME",
 						"4G| BODY",
 						"4GC| BOD",
@@ -145,7 +155,9 @@
 						"2G| TIME",
 						"2GME ERR",
 						"2GC| BOD",
+						"2G ERROR",
 						" | BOD 4",
+						" | BOD 2",
 						"| TIME  4",
 						"| BODY  2",
 						"ME ERRN 4",
@@ -155,104 +167,46 @@
 						"2GG ERROR",
 						" | BODN 4",
 						" | BODN 2",
-						"2GC| TIME "
-					]
-				},
-				{
-					"document": "Essence",
-					"frags": [
-						" erajb"
-					]
-				},
-				{
-					"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
-					"frags": [
-						" erajb"
-					]
-				},
-				{
-					"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
-					"frags": [
-						" erajb"
-					]
-				},
-				{
-					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
-					"frags": [
-						" erajb"
-					]
-				},
-				{
-					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
-					"frags": [
-						" erajb"
-					]
-				},
-				{
-					"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
-					"frags": [
-						" erajb"
-					]
-				},
-				{
-					"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
-					"frags": [
-						" erajb"
-					]
-				},
-				{
-					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
-					"frags": [
-						" erajb"
-					]
-				},
-				{
-					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
-					"frags": [
-						" erajb"
-					]
-				},
-				{
-					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
-					"frags": [
-						" erajb"
-					]
-				},
-				{
-					"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
-					"frags": [
-						" erajb"
+						"| BODY N 4",
+						"2GC| TIME ",
+						"2GCG ERROR"
 					]
 				}
 			]
 		}
 	],
-	"updt": 1568708080241,
-	"edit": 6,
+	"updt": 1569714121015,
+	"edit": 7,
 	"identified": [
 		{
 			"document": "NOT FOUND",
 			"frags": [
 				"fbret4",
+				"4fbret",
+				"4Gfbre",
 				"4G ERR",
 				"2fbret",
 				"2TIME ",
 				"fbret 4",
+				"ME ERR4",
 				"G ERR 2",
 				"4ME ERR",
 				"2G| BOD",
 				"2 | BOD",
 				" | BOD4",
 				" | BOD2",
+				" erajb2",
 				"| TIME 2",
 				"| BODY 4",
 				"| BODY 2",
 				"fbretN 4",
 				"fbretN 2",
+				"TIME N 4",
 				"ME ERR 4",
 				"G ERRN 2",
 				"4©| TIME",
 				"4| TIME ",
+				"4| BODY ",
 				"4G| TIME",
 				"4G| BODY",
 				"4GC| BOD",
@@ -262,7 +216,9 @@
 				"2G| TIME",
 				"2GME ERR",
 				"2GC| BOD",
+				"2G ERROR",
 				" | BOD 4",
+				" | BOD 2",
 				"| TIME  4",
 				"| BODY  2",
 				"ME ERRN 4",
@@ -272,79 +228,25 @@
 				"2GG ERROR",
 				" | BODN 4",
 				" | BODN 2",
-				"2GC| TIME "
+				"| BODY N 4",
+				"2GC| TIME ",
+				"2GCG ERROR"
 			]
 		},
 		{
 			"document": "MFT0X00_CLST0XF3_SECT0X756A_FILE0XBBE270FC",
 			"frags": [
-				"| BOD",
-				"TIME ",
+				"fbret",
 				"on era",
+				"ME ERR",
+				" | BOD",
+				"| TIME ",
+				"| BODY ",
 				"n erajb",
+				"G ERROR",
 				"lory' | ",
 				"llory' |",
 				" 'Mallor"
-			]
-		},
-		{
-			"document": "Essence",
-			"frags": [
-				" erajb"
-			]
-		},
-		{
-			"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
-			"frags": [
-				" erajb"
-			]
-		},
-		{
-			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
-			"frags": [
-				" erajb"
-			]
-		},
-		{
-			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
-			"frags": [
-				" erajb"
-			]
-		},
-		{
-			"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
-			"frags": [
-				" erajb"
-			]
-		},
-		{
-			"document": "MFT0XA2_CLST0XE0_SECT0XF623_FILE0XCC32859D",
-			"frags": [
-				" erajb"
-			]
-		},
-		{
-			"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
-			"frags": [
-				" erajb"
-			]
-		},
-		{
-			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
-			"frags": [
-				" erajb"
-			]
-		},
-		{
-			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
-			"frags": [
-				" erajb"
-			]
-		},
-		{
-			"document": "MFT0X44_CLST0X35_SECT0XA43B_FILE0XDD1A6B85",
-			"frags": [
-				" erajb"
 			]
 		}
 	],
