--- a/unknown_yf9eh6.jpg.json
+++ b/unknown_yf9eh6.jpg.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_yf9eh6.jpg",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_yf9eh6.jpg",
 	"sector": "K_9564",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1563841681486
+		},
+		{
+			"type": "died",
+			"when": 1569792715521
 		}
 	],
 	"next_scrape": 1568856915984,
@@ -87,6 +91,6 @@
 			]
 		}
 	],
-	"updt": 1568804174742,
-	"edit": 79
+	"updt": 1568813420398,
+	"edit": 80
 }
