--- a/unknown_efra6o.bot_brain.json
+++ b/unknown_efra6o.bot_brain.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_efra6o.bot_brain",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_efra6o.bot_brain",
 	"sector": "K_7542",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561581886645
+		},
+		{
+			"type": "died",
+			"when": 1569844691173
 		}
 	],
 	"next_scrape": 1568799584159,
@@ -124,8 +128,8 @@
 			]
 		}
 	],
-	"updt": 1568743542410,
-	"edit": 30,
+	"updt": 1568756131934,
+	"edit": 31,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
