--- a/derelict_gal6se.now.json
+++ b/derelict_gal6se.now.json
@@ -1,7 +1,7 @@
 {
 	"_id": "derelict_gal6se.now",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "dead",
 	"script": "derelict_gal6se.now",
 	"sector": "K_9556",
 	"sec_level": 4,
@@ -19,10 +19,14 @@
 				"from": "K_9556",
 				"to": "K_0887"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569914291042
+		}
 	],
-	"updt": 1569912334703,
-	"edit": 1906,
+	"updt": 1569913690920,
+	"edit": 1907,
 	"output": [
 		{
 			"args": {},
