--- a/uknown_9pb06p.ls.json
+++ b/uknown_9pb06p.ls.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_9pb06p.ls",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_9pb06p.ls",
 	"sector": "K_2748",
 	"sec_level": 4,
@@ -19,10 +19,14 @@
 				"from": "K_2748",
 				"to": "K_0887"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569913970697
+		}
 	],
-	"updt": 1568848388823,
-	"edit": 295,
+	"updt": 1568856279221,
+	"edit": 296,
 	"output": [
 		{
 			"args": {},
