--- a/uknown_bv09qj.find_t2.json
+++ b/uknown_bv09qj.find_t2.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_bv09qj.find_t2",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "uknown_bv09qj.find_t2",
 	"sector": "SPC_2500",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1563095388516
+		},
+		{
+			"type": "died",
+			"when": 1569914299919
 		}
 	],
 	"scrape_ct": 20,
@@ -169,8 +173,8 @@
 			]
 		}
 	],
-	"updt": 1568688676077,
-	"edit": 6,
+	"updt": 1568688899449,
+	"edit": 7,
 	"identified": [
 		{
 			"document": "NOT FOUND",
