--- a/unknown_ef2cjq.predict.json
+++ b/unknown_ef2cjq.predict.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_ef2cjq.predict",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_ef2cjq.predict",
 	"sector": "K_9564",
 	"sec_level": 4,
@@ -23,10 +23,14 @@
 				"from": "K_9564",
 				"to": "K_0887"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569913970697
+		}
 	],
-	"updt": 1568715969870,
-	"edit": 208,
+	"updt": 1568731817449,
+	"edit": 209,
 	"output": [
 		{
 			"args": {},
