--- a/uknown_9pb06p.data.json
+++ b/uknown_9pb06p.data.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_9pb06p.data",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_9pb06p.data",
 	"sector": "K_2748",
 	"sec_level": 4,
@@ -19,10 +19,14 @@
 				"from": "K_2748",
 				"to": "K_0887"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569913970697
+		}
 	],
-	"updt": 1568846136214,
-	"edit": 36,
+	"updt": 1568853573129,
+	"edit": 37,
 	"pl_output": "str.substr is not a function",
 	"next_scrape": 1568938672031
 }
