--- a/unknown_ef2cjq.db.json
+++ b/unknown_ef2cjq.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_ef2cjq.db",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_ef2cjq.db",
 	"sector": "K_9564",
 	"sec_level": 4,
@@ -23,8 +23,12 @@
 				"from": "K_9564",
 				"to": "K_0887"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569913970697
+		}
 	],
-	"updt": 1563909528205,
-	"edit": 3
+	"updt": 1563909978485,
+	"edit": 4
 }
