--- a/unknown_0qz0kr.flood.json
+++ b/unknown_0qz0kr.flood.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_0qz0kr.flood",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_0qz0kr.flood",
 	"sector": "K_8441",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1562051982595
+		},
+		{
+			"type": "died",
+			"when": 1569914533014
 		}
 	],
-	"updt": 1568778010772,
-	"edit": 275,
+	"updt": 1568778236486,
+	"edit": 276,
 	"next_scrape": 1568824048355,
 	"category": "dice_roller",
 	"last_update": 1568778011981,
