--- a/unknown_jmk7tk.state_cancer.json
+++ b/unknown_jmk7tk.state_cancer.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_jmk7tk.state_cancer",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_jmk7tk.state_cancer",
 	"sector": "NGC_5259",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1563293081434
+		},
+		{
+			"type": "died",
+			"when": 1569914460973
 		}
 	],
-	"updt": 1567850314917,
-	"edit": 18,
+	"updt": 1568697028810,
+	"edit": 19,
 	"scrape_ct": 5,
 	"next_scrape": 1568740043418,
 	"category": "clicker",
