--- a/unknown_0qz0kr.db.json
+++ b/unknown_0qz0kr.db.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_0qz0kr.db",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "unknown_0qz0kr.db",
 	"sector": "HJG_5971",
 	"sec_level": 2,
@@ -35,10 +35,14 @@
 				"from": "HJG_5971",
 				"to": "VNP_8704"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1569914541317
+		}
 	],
-	"updt": 1569108656229,
-	"edit": 12,
+	"updt": 1569114299467,
+	"edit": 13,
 	"scrape_ct": 16,
 	"next_scrape": 1569108626910,
 	"category": "UNKNOWN CATEGORY",
