--- a/unknown_jmk7tk.bot_scam_do_not_run.json
+++ b/unknown_jmk7tk.bot_scam_do_not_run.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_jmk7tk.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_jmk7tk.bot_scam_do_not_run",
 	"sector": "NGC_7203",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566828439520
+		},
+		{
+			"type": "died",
+			"when": 1569914533014
 		}
 	],
 	"scrape_ct": 5,
@@ -130,6 +134,6 @@
 			]
 		}
 	],
-	"updt": 1568896256860,
-	"edit": 63
+	"updt": 1568902801592,
+	"edit": 64
 }
