--- a/unknown_b23omn.t3_kill.json
+++ b/unknown_b23omn.t3_kill.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_b23omn.t3_kill",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_b23omn.t3_kill",
 	"sector": "K_8441",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562113406592
+		},
+		{
+			"type": "died",
+			"when": 1569941114771
 		}
 	],
 	"next_scrape": 1568761406859,
@@ -136,6 +140,6 @@
 			]
 		}
 	],
-	"updt": 1568694769774,
-	"edit": 69
+	"updt": 1568715067648,
+	"edit": 70
 }
