--- a/unknown_b23omn.t3_kill.json
+++ b/unknown_b23omn.t3_kill.json
@@ -42,14 +42,17 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
-						"o thi",
 						"lue o",
 						"e att",
-						"ttack.",
+						"lue.\\n",
 						"his va",
+						"EC Thi",
 						"B Add ",
 						"h.\\n20E",
-						" the da"
+						"e of th",
+						"attack.",
+						" the da",
+						"to this "
 					]
 				}
 			]
@@ -77,14 +80,17 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
-						"o thi",
 						"lue o",
 						"e att",
-						"ttack.",
+						"lue.\\n",
 						"his va",
+						"EC Thi",
 						"B Add ",
 						"h.\\n20E",
-						" the da"
+						"e of th",
+						"attack.",
+						" the da",
+						"to this "
 					]
 				}
 			]
@@ -112,14 +118,17 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
-						"o thi",
 						"lue o",
 						"e att",
-						"ttack.",
+						"lue.\\n",
 						"his va",
+						"EC Thi",
 						"B Add ",
 						"h.\\n20E",
-						" the da"
+						"e of th",
+						"attack.",
+						" the da",
+						"to this "
 					]
 				}
 			]
@@ -129,17 +138,20 @@
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
-				"o thi",
 				"lue o",
 				"e att",
-				"ttack.",
+				"lue.\\n",
 				"his va",
+				"EC Thi",
 				"B Add ",
 				"h.\\n20E",
-				" the da"
+				"e of th",
+				"attack.",
+				" the da",
+				"to this "
 			]
 		}
 	],
-	"updt": 1568715067648,
-	"edit": 70
+	"updt": 1569941199758,
+	"edit": 71
 }
