--- a/unknown_qnouq5.sectors.json
+++ b/unknown_qnouq5.sectors.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_qnouq5.sectors",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_qnouq5.sectors",
 	"sector": "NGC_1495",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561782074141
+		},
+		{
+			"type": "died",
+			"when": 1569955982783
 		}
 	],
 	"next_scrape": 1569091291077,
@@ -58,8 +62,8 @@
 			]
 		}
 	],
-	"updt": 1569047258301,
-	"edit": 175,
+	"updt": 1569047482650,
+	"edit": 176,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
