--- a/unknown_jmk7tk.state_cancer.json
+++ b/unknown_jmk7tk.state_cancer.json
@@ -17,8 +17,8 @@
 			"when": 1569914460973
 		}
 	],
-	"updt": 1568697028810,
-	"edit": 19,
+	"updt": 1569914818611,
+	"edit": 20,
 	"scrape_ct": 5,
 	"next_scrape": 1568740043418,
 	"category": "clicker",
@@ -46,12 +46,17 @@
 				{
 					"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
 					"frags": [
-						"ain, so",
-						". I'm l",
+						"oriti",
+						"DY Hi ",
+						"n, sorr",
 						" (again",
+						"ties (ag",
 						"ll. I'm ",
+						"l. I'm l",
 						"i all. I",
+						"gain, so",
 						"es (agai",
+						"again, s",
 						"'m loopi"
 					]
 				}
@@ -81,12 +86,17 @@
 				{
 					"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
 					"frags": [
-						"ain, so",
-						". I'm l",
+						"oriti",
+						"DY Hi ",
+						"n, sorr",
 						" (again",
+						"ties (ag",
 						"ll. I'm ",
+						"l. I'm l",
 						"i all. I",
+						"gain, so",
 						"es (agai",
+						"again, s",
 						"'m loopi"
 					]
 				}
@@ -147,6 +157,25 @@
 				"es (agai",
 				"again, s",
 				"'m loopi"
+			],
+			"hits": [
+				{
+					"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+					"frags": [
+						"oriti",
+						"DY Hi ",
+						"n, sorr",
+						" (again",
+						"ties (ag",
+						"ll. I'm ",
+						"l. I'm l",
+						"i all. I",
+						"gain, so",
+						"es (agai",
+						"again, s",
+						"'m loopi"
+					]
+				}
 			]
 		},
 		{
@@ -166,6 +195,23 @@
 				"ain, so S",
 				". I'm l S",
 				"'m loopiS"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"ain, soS",
+						". I'm lS",
+						"(again S",
+						" (againS",
+						"ll. I'm S",
+						"i all. IS",
+						"es (agaiS",
+						"ain, so S",
+						". I'm l S",
+						"'m loopiS"
+					]
+				}
 			]
 		}
 	],
@@ -173,27 +219,42 @@
 		{
 			"document": "NOT FOUND",
 			"frags": [
+				"ain, soS",
 				"Kain, so",
 				"K. I'm l",
 				"K (again",
+				". I'm lS",
+				"(again S",
+				" (againS",
+				"ll. I'm S",
+				"i all. IS",
+				"es (agaiS",
+				"ain, so S",
 				"Kll. I'm ",
 				"Ki all. I",
 				"Kes (agai",
 				"K'm loopi",
 				"K ain, so",
 				"K . I'm l",
-				"K  (again"
+				"K  (again",
+				". I'm l S",
+				"'m loopiS"
 			]
 		},
 		{
 			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
 			"frags": [
-				"ain, so",
-				". I'm l",
+				"oriti",
+				"DY Hi ",
+				"n, sorr",
 				" (again",
+				"ties (ag",
 				"ll. I'm ",
+				"l. I'm l",
 				"i all. I",
+				"gain, so",
 				"es (agai",
+				"again, s",
 				"'m loopi"
 			]
 		}
