--- a/anon_t4txpe.account_settings.json
+++ b/anon_t4txpe.account_settings.json
@@ -1,7 +1,7 @@
 {
 	"_id": "anon_t4txpe.account_settings",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "anon_t4txpe.account_settings",
 	"sector": "K_7542",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561560824535
+		},
+		{
+			"type": "died",
+			"when": 1569969772776
 		}
 	],
 	"next_scrape": 1568787371331,
@@ -130,8 +134,8 @@
 			]
 		}
 	],
-	"updt": 1568727021722,
-	"edit": 73,
+	"updt": 1568743542410,
+	"edit": 74,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
