--- a/uknown_156c0c.trans.json
+++ b/uknown_156c0c.trans.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_156c0c.trans",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_156c0c.trans",
 	"sector": "K_4792",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561314287180
+		},
+		{
+			"type": "died",
+			"when": 1569994546882
 		}
 	],
 	"next_scrape": 1568823540001,
@@ -213,8 +217,8 @@
 			]
 		}
 	],
-	"updt": 1568759964974,
-	"edit": 215,
+	"updt": 1568782520609,
+	"edit": 216,
 	"identified": [
 		{
 			"document": "NOT FOUND",
