--- a/unknown_ajhomk.sh.json
+++ b/unknown_ajhomk.sh.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_ajhomk.sh",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_ajhomk.sh",
 	"sector": "K_7542",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561468558289
+		},
+		{
+			"type": "died",
+			"when": 1570107827247
 		}
 	],
 	"next_scrape": 1569016602480,
@@ -68,8 +72,8 @@
 			]
 		}
 	],
-	"updt": 1568965952153,
-	"edit": 210,
+	"updt": 1568971139239,
+	"edit": 211,
 	"identified": [
 		{
 			"document": "Essence",
