--- a/uknown_8pcvow.lib.json
+++ b/uknown_8pcvow.lib.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_8pcvow.lib",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_8pcvow.lib",
 	"sector": "K_6830",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1566934028964
+		},
+		{
+			"type": "died",
+			"when": 1570115402931
 		}
 	],
 	"scrape_ct": 17,
@@ -124,8 +128,8 @@
 			]
 		}
 	],
-	"updt": 1568712813010,
-	"edit": 7,
+	"updt": 1568729505396,
+	"edit": 8,
 	"identified": [
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
