--- a/uknown_8pcvow.solve_keyes.json
+++ b/uknown_8pcvow.solve_keyes.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_8pcvow.solve_keyes",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_8pcvow.solve_keyes",
 	"sector": "SPC_2743",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564311134726
+		},
+		{
+			"type": "died",
+			"when": 1570115212495
 		}
 	],
 	"next_scrape": 1568840170950,
@@ -368,6 +372,6 @@
 			]
 		}
 	],
-	"updt": 1568778236486,
-	"edit": 68
+	"updt": 1568794253258,
+	"edit": 69
 }
