--- a/unknown_1hu252.f.json
+++ b/unknown_1hu252.f.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_1hu252.f",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_1hu252.f",
 	"sector": "K_9556",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1563563201949
+		},
+		{
+			"type": "died",
+			"when": 1570119748352
 		}
 	],
 	"next_scrape": 1568788075661,
@@ -138,8 +142,8 @@
 			]
 		}
 	],
-	"updt": 1568725892500,
-	"edit": 20,
+	"updt": 1568743315694,
+	"edit": 21,
 	"retry_args": [
 		{
 			"do": "clean"
