--- a/unknown_oyi4er.scam.json
+++ b/unknown_oyi4er.scam.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_oyi4er.scam",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "unknown_oyi4er.scam",
 	"sector": "NGC_1495",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1561793442557
+		},
+		{
+			"type": "died",
+			"when": 1570172440965
 		}
 	],
 	"next_scrape": 1568804687323,
@@ -243,8 +247,8 @@
 			]
 		}
 	],
-	"updt": 1568693187463,
-	"edit": 74,
+	"updt": 1568713941268,
+	"edit": 75,
 	"retry_args": [
 		{
 			"click": true
