--- a/uknown_t7by7m.check.json
+++ b/uknown_t7by7m.check.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_t7by7m.check",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_t7by7m.check",
 	"sector": "VNP_7552",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562129687040
+		},
+		{
+			"type": "died",
+			"when": 1570216187149
 		}
 	],
 	"next_scrape": 1568740889845,
@@ -161,6 +165,6 @@
 			]
 		}
 	],
-	"updt": 1567846254552,
-	"edit": 52
+	"updt": 1568697028810,
+	"edit": 53
 }
