--- a/unknown_srj679.loc.json
+++ b/unknown_srj679.loc.json
@@ -6,7 +6,7 @@
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1570224703381,
-	"last_scraped": 1570224723192,
+	"last_scraped": 1570225959956,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,5 +14,7 @@
 		}
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"You must transfer an amount as a GC string or a whole number. Examples: \\\"1KGC\\\" or 1000\"}",
-	"next_scrape": 1570317247885
+	"next_scrape": 1570315954689,
+	"updt": 1570224858593,
+	"edit": 1
 }
