--- a/unknown_y8gh1d.hmbms.json
+++ b/unknown_y8gh1d.hmbms.json
@@ -6,7 +6,7 @@
 	"sector": "NGC_4527",
 	"sec_level": 3,
 	"date_added": 1570224884726,
-	"last_scraped": 1570224894976,
+	"last_scraped": 1570226120422,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,5 +14,7 @@
 		}
 	],
 	"pl_output": "`DAccess denied.`",
-	"next_scrape": 1570306266074
+	"next_scrape": 1570314821035,
+	"updt": 1570225085540,
+	"edit": 1
 }
