--- a/unknown_srj679.public.json
+++ b/unknown_srj679.public.json
@@ -6,15 +6,15 @@
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1570224703381,
-	"last_scraped": 1570225972057,
+	"last_scraped": 1570227236808,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1570224703381
 		}
 	],
-	"pl_output": "Please specify a command with nav:\"<commandand name>\"-- access directory with nav:\"people\"",
-	"next_scrape": 1570317225384,
-	"updt": 1570224858593,
-	"edit": 1
+	"pl_output": "Please specify a command with nav:\"<command nd name>\"-- access directory with nav:\"people\"",
+	"next_scrape": 1570319112403,
+	"updt": 1570225986287,
+	"edit": 2
 }
