--- a/unknown_srj679.public.json
+++ b/unknown_srj679.public.json
@@ -6,15 +6,15 @@
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1570224703381,
-	"last_scraped": 1570229757286,
+	"last_scraped": 1570231075574,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1570224703381
 		}
 	],
-	"pl_output": "Please specify a command with nav:\"v:\"<command name>\"-- access directory with nav:\"people\"",
-	"next_scrape": 1570312594291,
-	"updt": 1570228694871,
-	"edit": 4
+	"pl_output": "Please specify a command with nav:\"<command namname>\"-- access directory with nav:\"people\"",
+	"next_scrape": 1570314400737,
+	"updt": 1570229819102,
+	"edit": 5
 }
