--- a/unknown_srj679.public.json
+++ b/unknown_srj679.public.json
@@ -6,15 +6,15 @@
 	"sector": "K_8332",
 	"sec_level": 2,
 	"date_added": 1570224703381,
-	"last_scraped": 1570234912973,
+	"last_scraped": 1570236149844,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1570224703381
 		}
 	],
-	"pl_output": "{\"ok\":false,\"msg\":\"RUNTIME ERROR amal_robo.public: Shift operation is currently in progress. 262s remain\"}",
-	"next_scrape": 1570325426598,
-	"updt": 1570233658812,
-	"edit": 8
+	"pl_output": "Please specify a command with nav:\"<command na name>\"-- access directory with nav:\"list\"",
+	"next_scrape": 1570325933947,
+	"updt": 1570235013023,
+	"edit": 9
 }
